# x86i

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  decode64.c  main.c  x86i.h
src/bochs/: arith64.cc  bit32.cc  bochs.h  config.h  cpu.h  cpuid.h  crregs.h  data_xfer16.cc  data_xfer64.cc  fetchdecode64.cc  funcs.cc  globals.cc  host_adapter.h  host_adapter.s  instr.h  logical32.cc  logical8.cc  shift64.cc  utils.cc  xmm.h
src/bochs/fpu/: fpu.cc
tool/: opcode_gen
